kyc module created

--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,22 @@ DB_DATABASE=crypto_exchange
 
 # JWT
 JWT_SECRET=your_jwt_secret_key
+JWT_EXPIRATION=1d
 
-# Email (Gmail)
-EMAIL_USER=your_gmail@gmail.com
-EMAIL_PASSWORD=your_app_password
+# Email
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=user@example.com
+EMAIL_PASSWORD=password
+EMAIL_FROM=noreply@example.com
+
+# Storage
+# Options: 'local' or 'aws'
+STORAGE_TYPE=local
+LOCAL_UPLOAD_PATH=uploads/kyc
+
+# AWS S3 (only needed if STORAGE_TYPE=aws)
+AWS_ACCESS_KEY_ID=your_aws_access_key
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-bucket-name
