--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,6 @@ AWS_S3_BUCKET=your-bucket-name
 # Stripe
 STRIPE_SECRET_KEY=sk_test_your_key
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+
+#coingecko
+COINGECKO_API_URL=coindecko_api_url
