crypto deposit implementation starts initial commit on 18-06-2025

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,22 @@
-# Database
-DB_HOST=localhost
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=postgres
-DB_DATABASE=crypto_exchange
-
-# JWT
-JWT_SECRET=your_jwt_secret_key
-JWT_EXPIRATION=1d
-
-# Email
-EMAIL_HOST=smtp.example.com
-EMAIL_PORT=587
-EMAIL_USER=user@example.com
-EMAIL_PASSWORD=password
-EMAIL_FROM=noreply@example.com
-
-# Storage
-# Options: 'local' or 'aws'
-STORAGE_TYPE=local
-LOCAL_UPLOAD_PATH=uploads/kyc
-
-# AWS S3 (only needed if STORAGE_TYPE=aws)
-AWS_ACCESS_KEY_ID=your_aws_access_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key
+# AWS Configuration
 AWS_REGION=us-east-1
-AWS_S3_BUCKET=your-bucket-name
+AWS_ACCESS_KEY_ID=your_access_key
+AWS_SECRET_ACCESS_KEY=your_secret_key
 
-# Stripe
-STRIPE_SECRET_KEY=sk_test_your_key
-STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret
+# DynamoDB Tables
+DEPOSIT_ADDRESSES_TABLE=crypto-deposit-addresses-dev
 
-#coingecko
-COINGECKO_API_URL=coindecko_api_url
+# EventBridge
+EVENT_BUS_NAME=crypto-events-dev
+
+# Blockchain Providers
+ALCHEMY_API_KEY=your_alchemy_api_key
+BLOCKCHAIR_API_KEY=your_blockchair_api_key
+ETHERSCAN_API_KEY=your_etherscan_api_key
+ETH_NODE_URL=https://eth-mainnet.g.alchemy.com/v2/your_key
+
+# API Security
+CRYPTO_WEBHOOK_API_KEY=your_webhook_api_key
+
+# Notification
+NOTIFICATION_TOPIC_ARN=arn:aws:sns:us-east-1:123456789012:crypto-deposit-notifications-dev
