--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/data-source.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.830.0",
+    "@aws-sdk/client-eventbridge": "^3.830.0",
+    "@aws-sdk/client-lambda": "^3.830.0",
+    "@aws-sdk/client-sns": "^3.830.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
@@ -32,6 +36,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.0",
     "@nestjs/typeorm": "^10.0.2",
+    "alchemy-sdk": "^3.6.0",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -43,7 +48,8 @@
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "stripe": "^14.20.0",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "web3": "^4.16.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
