--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "migration:revert": "npm run typeorm -- migration:revert -d src/db/data-source.ts"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.830.0",
     "@aws-sdk/client-eventbridge": "^3.830.0",
     "@aws-sdk/client-lambda": "^3.830.0",
+    "@aws-sdk/client-s3": "^3.832.0",
     "@aws-sdk/client-sns": "^3.830.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
@@ -41,6 +42,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -59,6 +61,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-google-oauth20": "^2.0.14",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^6.0.0",
